[gd_scene load_steps=12 format=2]

[ext_resource path="res://demo/noto_sans_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://demo/demo.gd" type="Script" id=2]
[ext_resource path="res://Texturen/Fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.142
margin_top = -260.0
margin_right = 473.858
margin_bottom = 260.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="LastLaunch" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 314.0
margin_right = -314.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="LastLaunch"]
margin_right = 316.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Last Launch: never"
align = 1

[node name="UserSettingsTitle" type="Label" parent="LastLaunch"]
margin_top = 33.0
margin_right = 316.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.941176, 0.25098, 1 )
text = "User Settings"
align = 1

[node name="PlayerName" type="HBoxContainer" parent="LastLaunch"]
margin_top = 66.0
margin_right = 316.0
margin_bottom = 89.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="LastLaunch/PlayerName"]
margin_top = 5.0
margin_right = 122.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
custom_fonts/font = SubResource( 5 )
text = "Player Name"
align = 2

[node name="LineEdit" type="LineEdit" parent="LastLaunch/PlayerName"]
margin_left = 162.0
margin_right = 316.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )

[node name="SystemSettingsTitle" type="Label" parent="LastLaunch"]
margin_top = 109.0
margin_right = 316.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.941176, 0.25098, 1 )
text = "System Settings"
align = 1

[node name="Driver" type="HBoxContainer" parent="LastLaunch"]
margin_top = 142.0
margin_right = 316.0
margin_bottom = 182.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="LastLaunch/Driver"]
margin_top = 13.0
margin_right = 200.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
custom_fonts/font = SubResource( 8 )
text = "GLES3"
align = 2

[node name="CheckButton" type="CheckButton" parent="LastLaunch/Driver"]
margin_left = 240.0
margin_right = 316.0
margin_bottom = 40.0
[connection signal="text_changed" from="LastLaunch/PlayerName/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="LastLaunch/Driver/CheckButton" to="." method="_on_CheckButton_pressed"]
